--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,10 @@
       max-width: 1200px;
       margin: 0 auto;
     }
+
+    .ant-card+.ant-card {
+      margin-top: 32px;
+    }
   </style>
 </head>
 
