feat: add service worker

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,9 @@
       margin-top: 32px;
     }
   </style>
+  <script type="text/javascript">
+    navigator.serviceWorker && navigator.serviceWorker.register('/sw.js');
+  </script>
 </head>
 
 <body>
